[package]
name = "saml10d15a"
version = "0.2.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"
repository = "https://github.com/JJJollyjim/saml10"
description = "Rust Peripheral Access Crate for the Atmel SAML10D15A"
license = "Apache-2.0"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]

